:star: Update tag and add lastest

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pre-image",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"main": "index.js",
 	"description": "A simple function to preload images in background idle time.",
 	"repository": {
@@ -10,11 +10,11 @@
 	"license": "MIT",
 	"author": "aomkirby123",
 	"keywords": [
-		"preImage",
-		"preImage js",
-		"preload-image",
-		"preload-image js",
-		"preload image javascript"
+		"pre-image",
+		"pre-image.js",
+		"pre-image js",
+		"preload image",
+		"preload image js"
 	],
 	"homepage": "https://github.com/aomkirby123/pre-image",
 	"bugs": "https://github.com/aomkirby123/opener-api-module/issues",
